tests/snapshots/integration_test__tests__captured_values_should_be_immutable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        exec `command`|cap stderr|;\n        stderr = \"whatever\";\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign to 'stderr' because it is not mutable"
exit_code: 103
