tests/snapshots/integration_test__tests__for_loop_variable_should_be_non_immutable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        for index in [1] {\n            index = 69;\n        };\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign to 'index' because it is not mutable"
exit_code: 103
