tests/snapshots/integration_test__tests__function_arguments_should_be_immutable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        func function(value: string) {\n            value = \"something else\";\n        }\n\n        function(\"test\");\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign to 'value' because it is not mutable"
exit_code: 103
