tests/snapshots/integration_test__tests__should_be_able_to_append_to_a_file.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nexec \"append me !\" => append(\"file_path\");\n\"#, \"\",\n    |executor|\n        {\n            executor.expect_run().with(predicate::eq::<Command>(Command::literal(\"append me !\".to_owned()).pipe(Command::append(\"file_path\".to_owned())).unwrap())).return_once(|_|\n                        Ok(CommandResult::new(0, \"\"))).once();\n        })"
---
stdout: ""
stderr: ""
error: ~
exit_code: 0
