tests/snapshots/integration_test__tests__should_be_able_to_capture_non_zero_exit_code_of_command.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nexec `my_command` ? code;\nout(code.fmt());\n\"#, \"\",\n    |executor|\n        {\n            executor.expect_run().with(predicate::eq::<Command>(\"my_command\".into())).return_once(|_|\n                        Ok(CommandResult::new(69, \"\", \"\"))).once();\n        })"
---
stdout: "69\n"
stderr: ""
error: ~
exit_code: 0
