tests/snapshots/integration_test__tests__should_be_able_to_get_input_from_file.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nexec open(\"file\") => `command1`;\n\"#, \"\",\n    |executor|\n        {\n            executor.expect_run().with(predicate::eq::<Command>(Command::open(\"file\".to_owned()).pipe(\"command1\".into()).unwrap())).return_once(|_|\n                        Ok(CommandResult::new(0, \"\"))).once();\n        })"
---
stdout: ""
stderr: ""
error: ~
exit_code: 0
