tests/snapshots/integration_test__tests__should_be_able_to_pipe_literal_to_command.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nvar input = \"input string\";\nexec input => `command`;\n\"#,\n    \"\",\n    |executor|\n        {\n            executor.expect_run().with(predicate::eq::<Command>(Command::literal(\"input string\".to_owned()).pipe(\"command\".into()).unwrap())).return_once(|_|\n                        Ok(CommandResult::new(0, \"\"))).once();\n        })"
---
stdout: ""
stderr: ""
error: ~
exit_code: 0
